# trading-bot

./: .env.example  .gitignore  AUDIT_PACKET.md  PROJECT_STATE.md  README.md  RUNBOOK_LOCAL_WINDOWS.md  main.py  pyproject.toml  run_diagnose.bat  run_live_paper_60m.bat  run_load_history.bat  run_readiness.bat  run_status_report.bat
agents/: __init__.py  audit_agent.py  breakout_agent.py  cost_model_agent.py  decision_orchestrator.py  delta_agent.py  execution_simulator_agent.py  market_context_agent.py  market_data_agent.py  market_reader.py  market_state_agent.py  mean_reversion_agent.py  meta_learning_agent.py  momentum_scalp_agent.py  net_profitability_gate.py  performance_learning_agent.py  pullback_continuation_agent.py  risk_manager_agent.py  risk_reward_agent.py  signal_evaluator.py  strategy_critic_agent.py  strategy_selection_agent.py  symbol_selection_agent.py  trading_brain_orchestrator.py  trend_following_agent.py
analytics/: __init__.py  backtest_engine.py  benchmark_engine.py  performance_analyzer.py  walk_forward_engine.py
config/: __init__.py  settings.py
core/: __init__.py  database.py  exceptions.py  ledger_reconciler.py  logger.py  logging_config.py  runtime_checks.py  settings.py
data/: __init__.py  binance_client.py  binance_market_data.py  binance_websocket_provider.py  live_context_fusion.py  market_data_provider.py  market_data_service.py  news_provider.py  sentiment_provider.py
execution/: __init__.py  autonomous_paper_engine.py  intraday_core_engine.py  live_paper_engine.py  market_watch_engine.py  paper_execution.py  paper_trader.py  (+1 more)
(+6 files in other folders)
