[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent-trading-system"
version = "0.1.0"
description = "Capa fundacional minima para market data cripto en modo lectura."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["agents*", "analytics*", "config*", "core*", "data*", "execution*", "risk*"]
